--- a/QML/Gabriel/QnKK_1/main.ipynb
+++ b/QML/Gabriel/QnKK_1/main.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-01 18:54:04.843467: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-01 18:54:04.999927: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-01 18:54:05.156916: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-01 18:54:05.268225: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-01 18:54:05.299458: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-10-01 18:54:05.536778: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-11-12 16:45:06.205065: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-11-12 16:45:06.363324: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-11-12 16:45:06.514322: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-11-12 16:45:06.627935: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-11-12 16:45:06.665647: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-11-12 16:45:06.899203: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-10-01 18:54:06.819742: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-11-12 16:45:08.071115: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "array([0, 0, 0, ..., 9, 9, 9])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb5b2b3a7c4340ec9ae5b24ff8f4dda4",
+       "model_id": "3cbf2bd66ce842bcb10136cf1a04fe52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d45ff266384e4a53baf312f9848c4553",
+       "model_id": "54db1a34d5594e7189dc8a6c532d71e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,13 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61cfa039786746f1af2c536c37f199f4",
+       "model_id": "2de9168acf6a4034bca76f0299fe5c1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,13 +355,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab6deb6453c3477096f1ecb4bc21c3e9",
+       "model_id": "e1797ad5f3ef4d69a7f1c6141f208535",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,13 +392,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edc757ef0e41467b85867632a3e4ec89",
+       "model_id": "82a84888af6849d998420a2fa2f13e83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,13 +433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e810a4f99ca54494bcf325a385e50e06",
+       "model_id": "d6e04e86ea0a4d27a7f446d77c3225a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,13 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fbdad0802b54045859bb817fff14bdb",
+       "model_id": "8a15ef4b60434444b43b8aeef0d645e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -527,13 +527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a165f35c250148d0a7e0674b7bf9b759",
+       "model_id": "49df1fa5ea2a4ccfa7e698fc0d4dbe08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "3    0  0  0  0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "[(0, 0)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,13 +771,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3eec01ada5ef4a6b956a5509d35dffdd",
+       "model_id": "b70bbd4aaca64401beb716a4db8514f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -802,7 +802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56b2214112a44d7b999fc9c545db6d05",
+       "model_id": "73f46bb0cb554a1e88b944484bd97f48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,7 +827,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbdbafe0d25c401e8b45c2a306578c17",
+       "model_id": "b5fa6cd5ed3145c8a83e433b24615d4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -852,7 +852,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "399e3693bbe14e9da507e5f9b7f184b7",
+       "model_id": "f397c641bfc840d8a366deff1c896be6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -899,13 +899,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ce69ade6b7b4b5e8d6201fb7f97fbfc",
+       "model_id": "ec76f84146974ec89485eac10d3823cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,46 +956,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(brightness \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m0.33\u001b[39m)  \u001b[38;5;66;03m# Example quantization\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Define angles for GLCM\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m angles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m4\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m4\u001b[39m]\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_features\u001b[39m(X):\n\u001b[1;32m     15\u001b[0m     features \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 62\u001b[0m\n\u001b[1;32m     58\u001b[0m         features\u001b[38;5;241m.\u001b[39mappend(feature_vector)\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(features)\n\u001b[0;32m---> 62\u001b[0m features \u001b[38;5;241m=\u001b[39m extract_features(train_X)\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExtracted features shape:\u001b[39m\u001b[38;5;124m'\u001b[39m, features\u001b[38;5;241m.\u001b[39mshape)\n",
+      "Cell \u001b[0;32mIn[21], line 46\u001b[0m, in \u001b[0;36mextract_features\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     43\u001b[0m energy \u001b[38;5;241m=\u001b[39m graycoprops(glcm, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124menergy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# Compute entropy\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m entropy \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39msum(glcm \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog2(glcm \u001b[38;5;241m+\u001b[39m (glcm \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m)), axis\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     48\u001b[0m glcm_features \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m [contrast, correlation, energy, entropy]:\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/numpy/core/fromnumeric.py:2172\u001b[0m, in \u001b[0;36m_sum_dispatcher\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2102\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2103\u001b[0m \u001b[38;5;124;03m    Clip (limit) the values in an array.\u001b[39;00m\n\u001b[1;32m   2104\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2167\u001b[0m \n\u001b[1;32m   2168\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m   2169\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapfunc(a, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclip\u001b[39m\u001b[38;5;124m'\u001b[39m, a_min, a_max, out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m-> 2172\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_sum_dispatcher\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   2173\u001b[0m                     initial\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, where\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m   2174\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (a, out)\n\u001b[1;32m   2177\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_sum_dispatcher)\n\u001b[1;32m   2178\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msum\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39m_NoValue,\n\u001b[1;32m   2179\u001b[0m         initial\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39m_NoValue, where\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39m_NoValue):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# Define quantization functions\n",
     "def quantize_h(hue):\n",
-    "    return int(hue // 40)  # Example quantization\n",
+    "    return int(hue // 40)  \n",
     "\n",
     "def quantize_s(saturation):\n",
-    "    return int(saturation // 0.33)  # Example quantization\n",
+    "    return int(saturation // 0.33)  \n",
     "\n",
     "def quantize_b(brightness):\n",
-    "    return int(brightness // 0.33)  # Example quantization\n",
+    "    return int(brightness // 0.33)  \n",
     "\n",
-    "# Define angles for GLCM\n",
     "angles = [0, np.pi/4, np.pi/2, 3*np.pi/4]\n",
     "\n",
     "def extract_features(X):\n",
     "    features = []\n",
     "    for idx in range(X.shape[0]):\n",
-    "        # Reshape the image\n",
+    "\n",
     "        img = X[idx].reshape(28, 28)\n",
     "        \n",
-    "        # Since the image is already grayscale, no need to convert it\n",
+    "\n",
     "        gray_img = img\n",
     "        \n",
-    "        # Quantize hue, saturation, and brightness\n",
-    "        hsv_img = color.rgb2hsv(np.stack((gray_img,)*3, axis=-1))  # Stack to create a 3-channel image\n",
+    "\n",
+    "        hsv_img = color.rgb2hsv(np.stack((gray_img,)*3, axis=-1))  \n",
     "        hue = hsv_img[:, :, 0] * 360\n",
     "        saturation = hsv_img[:, :, 1]\n",
     "        brightness = hsv_img[:, :, 2]\n",
@@ -1008,7 +1008,7 @@
     "        Q_s = 3\n",
     "        G = h_quantized * Q_h + s_quantized * Q_s + b_quantized\n",
     "        \n",
-    "        # Extract GLCM features\n",
+    "        \n",
     "        gray_img_uint = (gray_img * 255).astype(np.uint8)\n",
     "        glcm = graycomatrix(gray_img_uint, distances=[1], angles=angles)\n",
     "            \n",
@@ -1016,7 +1016,7 @@
     "        correlation = graycoprops(glcm, 'correlation')\n",
     "        energy = graycoprops(glcm, 'energy')\n",
     "        \n",
-    "        # Compute entropy\n",
+    "        \n",
     "        entropy = -np.sum(glcm * np.log2(glcm + (glcm == 0)), axis=(0, 1))\n",
     "        \n",
     "        glcm_features = []\n",
@@ -1025,7 +1025,6 @@
     "            variance = np.var(prop)\n",
     "            glcm_features.extend([mean, variance])\n",
     "        \n",
-    "        # Flatten the GLCM matrices and concatenate with G histogram\n",
     "        G_histogram, _ = np.histogram(G, bins=np.arange(73))\n",
     "        \n",
     "        feature_vector = np.concatenate([G_histogram, glcm_features])\n",
